# jungo-scripts

./: .gitignore  README.md  flake.nix  fourmolu.yaml  jungo-scripts.cabal  jungochain.yaml  package.yaml  stack.yaml
.github/workflows/: haskell.yml
scripts/: JungochainRun.hs
src/: JungochainRun.hs
