cabal-version:        3.0

name:                 jungo-scripts
version:              0.1.0.0
-- description:    Please see the README on GitHub at <https://github.com/jungoai/jungo-startup#readme>
homepage:             https://github.com/jungoai/jungo-scripts#readme
bug-reports:          https://github.com/jungoai/jungo-scripts/issues
author:               Mohsen Nezamolmolki
maintainer:           thelight.mn@gmail.com
build-type:           Simple
extra-source-files:   README.md

source-repository head
  type: git
  location: https://github.com/jungoai/jungo-scripts

executable jungochain-runner
  main-is:            JungochainRunner.hs
  -- other-modules:
  hs-source-dirs:     scripts
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedRecordDot
    RecordWildCards
    -- NoFieldSelectors
    TypeApplications
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , relude
    , aeson
    , text
    , turtle
    , yaml
    , monad-logger
    , pretty-simple
    , directory
  default-language:   GHC2021
